# indexed

./: .gitignore  CLAUDE.md  README.md  VERSION  _findings.md
.claude/: settings.json
.claude/hooks/: bash-build-guard.sh  check-update.sh  path-guard.sh  search-reminder.sh  sync-trigger.sh  version-reminder.sh
.claude/rules/: 00-core.md  OVERVIEW.md  artifacts.md  design-languages.md  dialogue-style.md  git-workflow.md  ix-agents.md  naming.md  reports.md  research.md  shared-repos.md  specs-templates.md
_shared/design-languages/: README.md  index.html
_shared/docs/: cli-quickstart.md
_shared/specs/: OVERVIEW.md  README.md
_shared/templates/: OVERVIEW.md  README.md
artifacts/: OVERVIEW.md  README.md  capabilities.md
artifacts/ix-agent-run-cli/: .env.example  SPEC.md  SPEC.yaml  config.py  main.py  placeholders.py  runner.py  schedule.py  thinking.py
artifacts/ix-bundle-cli/: .gitignore  SPEC.yaml  config.py  main.py
artifacts/ix-init-cli/: SPEC.md  SPEC.yaml  config.py  main.py  markers.py  requirements.txt
artifacts/ix-schedule-cli/: SPEC.yaml  config.py  job.example.yaml  main.py  registry.py  registry.yaml  (+1 more)
ix-agents/: OVERVIEW.md  README.md  registry.md
ix-gui/: OVERVIEW.md  SPEC.yaml
ix-gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
ix-gui/src-tauri/.cargo/: config.toml
ix-gui/src-tauri/capabilities/: default.json
ix-gui/src-tauri/icons/: icon.icns
ix-gui/src-tauri/src/: cli.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  updates.rs  workspace.rs  workspaces.rs
reports/: OVERVIEW.md
research/: OVERVIEW.md  README.md
(+88 files in other folders)
