[package]
name = "ix-gui"
version = "0.1.0"
description = "indexed 图形操作面板"
authors = ["indexed"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "ix_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-pty = "0.2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
anyhow = "1"
thiserror = "1"
which = "6"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
